--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -19,7 +19,7 @@ jobs:
           echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
           sudo apt update && sudo apt install vault -y
 
-      - name: Login to Vault and Export Secrets
+      - name: Login to Vault and Export Secrets Proper
         env:
           VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
           VAULT_USERNAME: ${{ secrets.VAULT_USERNAME }}
